# ULTRA-SATISFACTORY

./: .gitignore  modal_app.py  playbook.md  project.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yaml
.streamlit/: config.toml
app/: app.py
nbs/: 00_data.ipynb  index.ipynb  nbdev.yml
scripts/: build_stlite.py  download_images.py  inspect_buildings.py  inspect_data.py  inspect_targets.py  patch_streamlit_index.py  test_data.py
ultra_satisfactory/: _modidx.py  data.py
